웹 페이지 수정

--- a/app/src/main/assets/www/main.html
+++ b/app/src/main/assets/www/main.html
@@ -24,13 +24,10 @@
 		// DOT.logScreen(screen);
 		setTimeout(function(){	
 			DOT.onStartPage();
-		
-			// var screen = new Object();
-				
-			// screen["pi"] = "main";
-			// screen["pnc"] = "pnc0001";
-			// DOT.logScreen(screen);
-
+			var screen = new Object();
+			screen["pi"] = "web-main";
+			screen["pnc"] = "pnc0001";
+			DOT.logScreen(screen);
 		},500);
 
 	}
