--- a/app/src/main/assets/www/main.html
+++ b/app/src/main/assets/www/main.html
@@ -86,7 +86,7 @@
     
     function logClick()
  	{
-        console.log("[wisetracker] log Click");
+        console.log("[WiseLog] log Click");
         console.log(DOT);
 		var click = new Object();
 		click["ckTp"] = "addCart";
@@ -118,7 +118,7 @@
 
 		// DOT.logPurchase(purchase);
 
-        console.log("[wisetracker] logPurchase Click");
+        console.log("[WiseLog] logPurchase Click");
 
 		var purchase = new Object();
 		purchase["ordNo"] = "your Order Number"
@@ -144,7 +144,7 @@
 	
 	function logEvent()
     {
-        console.log("[wisetracker] logEvent Click");
+        console.log("[WiseLog] logEvent Click");
     	var event = new Object();
 		
 		event["eventCode"] = "eventCode001";
@@ -166,7 +166,7 @@
 		// screen["cp"] = "^메인^계정정보 수정";
 		// DOT.logScreen(screen);
 
-		console.log("[wisetracker] logScreen Click");
+		console.log("[WiseLog] logScreen Click");
 
 		var screen = new Object();
 		screen["cp"] = "^Main^Account";
