--- a/app/src/main/assets/www/productList.html
+++ b/app/src/main/assets/www/productList.html
@@ -43,7 +43,7 @@
      <div id="myDIV">
 This is my product List DIV element.
 </div>
-<a href="/main.html">Go back </a> <br/>
+<a href="file:///android_asset/www/main.html">Go back </a> <br/>
 
   <a href="file:///android_asset/www/productDetail.html">Go to Product Detail </a><br/>
   <center>
